js/src/tests/test262/built-ins/NativeErrors/TypeError/length.js
assert
.
sameValue
(
TypeError
.
length
1
)
;
verifyNotEnumerable
(
TypeError
"
length
"
)
;
verifyNotWritable
(
TypeError
"
length
"
)
;
verifyConfigurable
(
TypeError
"
length
"
)
;
reportCompare
(
0
0
)
;
